[tool.poetry]
name = "myproject"
version = "0.1.0"
description = "My Python project"
authors = ["John Doe <john@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.20.0"
pandas = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
mypy = "^0.800"
